--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,19 @@ body {
     width: 80%;
     margin: 0 auto;
 }
+.h2-tag {
+    color: #0B0223;
+font-size: 48px;
+font-weight: 700;
+}
+.p-tag {
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+}
+.span-text {
+    color: #AC53DD;
+}
 /* nav style */
 header {
     background: #fff;
@@ -106,8 +119,26 @@ button.go-rogue {
     background-color: #4EC5F7;
 }
 
+/* card style */
 
-
+.card-section {
+    padding: 100px 0;
+}
+.card-text {
+    text-align: center;
+}
+.card-img-container {
+    display: flex;
+    gap: 20px;
+    margin-top: 50px;
+}
+.card {
+    width: 400px;
+    height: 500px;
+}
+.card img {
+    width: 100%;
+}
 
 
 
@@ -118,15 +149,19 @@ button.go-rogue {
 
 @media screen and (max-width: 576px) {
     nav, 
-    nav ul {
+    nav ul,
+    .banner,
+    .card-img-container {
         flex-direction: column;
     }
     /* banner section */
-    .banner {
-        flex-direction: column;
-    }
     .banner-image img {
         width: 100%;
         margin-top: 50px;
+    }
+    /* card section */
+    .card {
+        width: 370px;
+        height: auto;
     }
 }
