--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ button.go-rogue {
 
 /* play instantly section style */
 .play-instantly-section {
-    padding: 100px 0;
+    padding-top: 100px;
 }
 .play-instantly {
     display: flex;
@@ -152,6 +152,33 @@ button.go-rogue {
     position: relative;
     right: 150px;
     bottom: 300px;
+}
+
+/* buttons section starts */
+.group-buttons {
+    background-color: #FDF7FD;
+    padding: 200px 0;
+}
+.button-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+.button-list-link {
+    background-color: #fff;
+    margin: 30px 10px;
+    color: #0B0223;
+    font-size: 20px;
+    display: flex;
+    gap: 30px;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 10px;
+    border-radius: 40px;
+}
+.button-list-link:hover {
+    border: 1px solid #FF42A5;
+    color: #FF42A5;
 }
 
 /* footer area styles */
@@ -232,6 +259,10 @@ p.copyright {
     .img-badge img {
         width: 200px;
         height: 250px;
+    }
+    /* group button */
+    .group-buttons {
+        padding: 100px 0;
     }
     /* footer section */
     .link-item ul,
